tests/ui/endpoint/unsafe.stderr
error: Endpoint handler methods must not be unsafe
 --> tests/ui/endpoint/unsafe.rs:9:1
  |
9 | unsafe fn read_all() {}
  | ^^^^^^

error[E0412]: cannot find type `read_all___gotham_restful_endpoint` in this scope
 --> tests/ui/endpoint/unsafe.rs:5:12
  |
5 | #[resource(read_all)]
  |            ^^^^^^^^ not found in this scope
  |
help: you might be missing a type parameter
  |
4 | #[derive(Resource<read_all___gotham_restful_endpoint>)]
  |                  ++++++++++++++++++++++++++++++++++++
